--- a/css/aboutMe.css
+++ b/css/aboutMe.css
@@ -62,6 +62,12 @@ img{
     margin: 0 auto;
     float: right;
 }
+.iconfont.icon-fangdajing {
+    color: #FFFFFF;
+    font-size: 26px;
+    line-height: 60px;
+    float: right;
+}
 /*headerFont*/
 h1{
     line-height: 56px;
