--- a/css/index.css
+++ b/css/index.css
@@ -70,6 +70,12 @@ h1{
     color: #ffffff;
     font-size: 16px;
  }
+.iconfont.icon-fangdajing {
+    color: #FFFFFF;
+    font-size: 26px;
+    line-height: 60px;
+    float: right;
+}
 
 
 /*banner*/
@@ -209,27 +215,38 @@ h1{
 }
 .rightLink li a{
     height: 53px;
-    display: block;
+    display: flex;
     overflow: hidden;
     box-shadow: 0px 1px 0px rgba(255,255,255,.1), inset 0px 1px 1px rgba(0,0,0,.7);
     border-radius: 50%;
     margin: 0 5px;
+    justify-content: center;
+    align-items: center;
 }
-.first::before{
-    content: "\e64b";
-}
-a.first{
+a.iconfont.icon-zhuye {
     color: #ef5509;
     font-size: 36px;
 }
-.first {
-    font-family: "iconfont" !important;
+/*.iconfont icon-shouye {*/
+/*    font-family: "iconfont" !important;*/
+/*    font-size: 30px;*/
+/*    font-style: normal;*/
+/*    -webkit-font-smoothing: antialiased;*/
+/*    text-align: center;*/
+/*    line-height: 53px;*/
+/*    -moz-osx-font-smoothing: grayscale;*/
+/*}*/
+a.iconfont.icon-youxiang- {
+    color: #FF991A;
+    font-size: 28px;
+}
+a.iconfont.icon-icon {
+    color: #1296DB;
     font-size: 30px;
-    font-style: normal;
-    -webkit-font-smoothing: antialiased;
-    text-align: center;
-    line-height: 53px;
-    -moz-osx-font-smoothing: grayscale;
+}
+a.iconfont.icon-weixin {
+    color: #07AF12;
+    font-size: 30px;
 }
 
 
